# ebury-challenge

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
dags/: ebury_dag.py
data/: customer_transactions.csv
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/aggregates/: agg_monthly_transactions.sql  agg_monthly_transactions.yml
dbt/models/clean/: clean_customer_transactions.sql  sources.yml
dbt/models/marts/: dim_customers.sql  dim_customers.yml  fact_transactions.sql  fact_transactions.yml
dbt/tests/: test_agg_monthly_transactions.sql  test_dim_customers.sql  test_fact_transactions.sql
dlthub/: ingestion.py
include/: constants.py  utils.py
scripts/: project_config.sh  setup.sh
tests/: test_ingestion.py  test_utils.py
